Added projects endpoints + tests
