# src/models/dto/admin/update-project.dto.ts
@@ -1,9 +1,36 @@
 import { ApiProperty } from '@nestjs/swagger';
-import { IsString } from 'class-validator';
+import {
+  IsBoolean,
+  IsDateString,
+  IsOptional,
+  IsString,
+  IsUrl,
+} from 'class-validator';
 
-// TODO - RETOCAR
 export class UpdateProjectDto {
+  @IsDateString()
+  @ApiProperty()
+  date: Date;
+
   @IsString()
   @ApiProperty()
-  projectName: string;
+  title: string;
+
+  @IsString()
+  @ApiProperty()
+  subtitle: string;
+
+  @IsUrl()
+  @IsOptional()
+  @ApiProperty()
+  projectLink?: string;
+
+  @IsUrl()
+  @IsOptional()
+  @ApiProperty()
+  imageLink?: string;
+
+  @IsBoolean()
+  @ApiProperty()
+  isDisplayed: boolean;
 }
