# src/models/dto/portfolio/project-portfolio.dto.ts
@@ -1,17 +1,51 @@
 import { ApiProperty } from '@nestjs/swagger';
-import { IsString, IsArray } from 'class-validator';
+import { IsString, IsArray, IsUUID, IsUrl, IsOptional } from 'class-validator';
+import { TagDto } from '../tag.dto';
+import { Type } from 'class-transformer';
+import { BulletPointDto } from '../bullet-point.dto';
+import { LinkDto } from '../link.dto';
 
-// TODO - RETOCAR
 export class ProjectPortfolioDto {
+  @IsUUID()
+  @ApiProperty()
+  id: string;
+
   @IsString()
   @ApiProperty()
-  projectName: string;
+  date: number;
+
+  @IsString()
+  @ApiProperty()
+  title: string;
+
+  @IsString()
+  @ApiProperty()
+  subtitle: string;
+
+  @IsUrl()
+  @IsOptional()
+  @ApiProperty()
+  projectLink?: string;
+
+  @IsUrl()
+  @IsOptional()
+  @ApiProperty()
+  imageLink?: string;
 
   @IsArray()
+  @Type(() => BulletPointDto)
   @ApiProperty()
-  technologies: string[];
+  description: BulletPointDto[];
 
   @IsArray()
+  @Type(() => LinkDto)
+  @IsOptional()
   @ApiProperty()
-  bulletPoints: string[];
+  links?: LinkDto[];
+
+  @IsArray()
+  @Type(() => TagDto)
+  @IsOptional()
+  @ApiProperty()
+  tags?: TagDto[];
 }
